--- a/src/assets/css/side-menu.css
+++ b/src/assets/css/side-menu.css
@@ -61,19 +61,20 @@
   margin: 0px;
   line-height: 35px;
   cursor: pointer;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Gugi', cursive;
   font-size: 15px;
 }
 .fa{
-  margin-right: 10px;
+  margin-left: 4px;
+  margin-right: 6px;
 }
 .nav-side-menu ul :not(collapsed) .arrow:before,
 .nav-side-menu li :not(collapsed) .arrow:before {
   font-family: FontAwesome;
   content: "\f078";
   display: inline-block;
-  padding-left: 10px;
-  padding-right: 22px;
+  padding-left: 4px;
+  padding-right: 12px;
   vertical-align: middle;
   float: right;
 }
@@ -104,6 +105,14 @@
   background-color: lightgray;
   border-left: 3px solid #007bff;
 }
+.nav-side-menu .title {
+  background-color: #007bff;
+  border-left: 3px solid #007bff;
+  color: lightgray;
+  text-align: center;
+  font-size: 18px;
+  font-family: 'Gugi', cursive;
+}
 .nav-side-menu li {
   padding-left: 0px;
   border-left: 3px solid white;
@@ -120,6 +129,7 @@
 .nav-side-menu li:hover {
   border-left: 3px solid #007bff;
   background-color: lightgray;
+  color: #007bff;
   -webkit-transition: background-color .3s ease;
   -moz-transition: background-color .3s ease;
   -o-transition: background-color .3s ease;
