--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,1 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto:700');
+@import url('https://fonts.googleapis.com/css?family=Gugi|Roboto:700');
