--- a/src/app/scolarite/attestation/attestation.component.html
+++ b/src/app/scolarite/attestation/attestation.component.html
@@ -3,12 +3,13 @@
         <div class="input-group my-4">
           <input type="text" class="form-control" placeholder="Cherchez une demande ..." aria-label="Cherchez une demande ..." aria-describedby="basic-addon2">
           <div class="input-group-append">
-            <button class="btn btn-outline-primary" type="button">
+            <button class="btn btn-outline-secondary" type="button">
               <i class="fa fa-search fa-lg" aria-hidden="true"></i> Recherche
             </button>
           </div>
         </div>
-
     </div>
-
+    <div class="a4 border border-primary ml-5">
+      
+    </div>
 </div>
