--- a/src/app/scolarite/menu-scolarite/menu-scolarite.component.html
+++ b/src/app/scolarite/menu-scolarite/menu-scolarite.component.html
@@ -79,24 +79,24 @@
                   </a>
                 </li>
                 <hr>
-                <li class="title mb-2 px-2 py-2">
-                  <a>
+                <div class="title mb-2 px-2 py-2">
                  Gestion de demandes
-                  </a>
-                </li>
+               </div>
                 <li  data-toggle="collapse" data-target="#attestation" class="collapsed ">
                   <a><i class="fa fa-file-text fa-3"></i> Attestation de scolarité <span class="arrow"></span></a>
                 </li>
                 <ul class="sub-menu collapse" id="attestation">
-                    <li> <i class="fa fa-spinner fa-l"></i> <a routerLink="#">En cours de traitement</a></li>
-                    <li> <i class="fa fa-check fa-l"></i> <a routerLink="#">Livrées</a></li>
-                    <li> <i class="fa fa-ban fa-l"></i> <a routerLink="#">Refusées</a></li>
-                    <li> <i class="fa fa-list fa-l"></i> <a routerLink="all">Tous les demandes</a></li>
+                    <li> <i class="fa fa-plus fa-3"></i> <a routerLink="#">Nouvelles demandes</a></li>
+                    <li> <i class="fa fa-spinner fa-3"></i> <a routerLink="#">En cours de traitement</a></li>
+                    <li> <i class="fa fa-check fa-3"></i> <a routerLink="#">Livrées</a></li>
+                    <li> <i class="fa fa-ban fa-3"></i> <a routerLink="#">Refusées</a></li>
+                    <li> <i class="fa fa-list fa-3"></i> <a routerLink="all">Tous les demandes</a></li>
                 </ul>
                 <li  data-toggle="collapse" data-target="#diplome" class="collapsed ">
                   <a><i class="fa fa-graduation-cap fa-3"></i> Retrait de diplômes <span class="arrow"></span></a>
                 </li>
                 <ul class="sub-menu collapse" id="diplome">
+                    <li> <i class="fa fa-plus fa-3"></i> <a routerLink="#">Nouvelles demandes</a></li>
                     <li> <i class="fa fa-spinner fa-l"></i> <a routerLink="#">En cours de traitement</a></li>
                     <li> <i class="fa fa-check fa-l"></i> <a routerLink="#">Livrées</a></li>
                     <li> <i class="fa fa-ban fa-l"></i> <a routerLink="#">Refusées</a></li>
