--- a/src/app/scolarite/attestation/attestation.component.html
+++ b/src/app/scolarite/attestation/attestation.component.html
@@ -9,7 +9,6 @@
           </div>
         </div>
     </div>
-    <div class="a4 border border-primary ml-5">
-      
-    </div>
 </div>
+
+<router-outlet></router-outlet>
